--- a/Views/Home/Dashboard.cshtml
+++ b/Views/Home/Dashboard.cshtml
@@ -70,119 +70,15 @@
     <link rel="stylesheet" type="text/css" href="~/assets/css/widgets/modules-widgets.css">
     <!-- END PAGE LEVEL PLUGINS/CUSTOM STYLES -->
     <!--  BEGIN MAIN CONTAINER  -->
-    <div class="main-container" id="container">
+    <div class="main-container mt-3" id="container">
 
         <!--  BEGIN CONTENT AREA  -->
         @*<div id="content" class="main-content">*@
-        <div class="layout-px-spacing">
+        @*<div class="layout-px-spacing">
 
-            <div class="row layout-top-spacing">
+            <div class="row layout-top-spacing">*@
 
-                <div class="col-xl-4 col-lg-12 col-md-12 col-sm-12 col-12 layout-spacing">
-                    <div class="widget widget-one">
-                        <div class="widget-heading">
-                            <h6 class="">Statistics</h6>
-                            <div class="task-action">
-                                <div class="dropdown">
-                                    <a class="dropdown-toggle" href="#" role="button" id="pendingTask" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal"><circle cx="12" cy="12" r="1"></circle><circle cx="19" cy="12" r="1"></circle><circle cx="5" cy="12" r="1"></circle></svg>
-                                    </a>
-
-                                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="pendingTask" style="will-change: transform;">
-                                        <a class="dropdown-item" href="javascript:void(0);">View</a>
-                                        <a class="dropdown-item" href="javascript:void(0);">Download</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="w-chart">
-                            <div class="w-chart-section">
-                                <div class="w-detail">
-                                    <p class="w-title">Total Visits</p>
-                                    <p class="w-stats">423,964</p>
-                                </div>
-                                <div class="w-chart-render-one">
-                                    <div id="total-users"></div>
-                                </div>
-                            </div>
-
-                            <div class="w-chart-section">
-                                <div class="w-detail">
-                                    <p class="w-title">Paid Visits</p>
-                                    <p class="w-stats">7,929</p>
-                                </div>
-                                <div class="w-chart-render-one">
-                                    <div id="paid-visits"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 layout-spacing">
-                    <div class="widget widget-account-invoice-two">
-                        <div class="widget-content">
-                            <div class="account-box">
-                                <div class="info">
-                                    <div class="inv-title">
-                                        <strong><h1 class="text-center">Welcome Back @user.FullName!</h1></strong>
-                                    </div>
-                                </div>
-                                <div class="acc-action">
-                                    <div class="">
-                                        <a href="javascript:void(0);"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg></a>
-                                        <a href="javascript:void(0);"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-credit-card"><rect x="1" y="4" width="22" height="16" rx="2" ry="2"></rect><line x1="1" y1="10" x2="23" y2="10"></line></svg></a>
-                                    </div>
-                                    <a href="javascript:void(0);" class=" rounded bs-tooltip" title="Click here for more actions">Quick Actions</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 layout-spacing">
-                    <div class="widget widget-card-four">
-                        <div class="widget-content">
-                            <div class="w-header">
-                                <div class="w-info">
-                                    <h6 class="value">Expenses</h6>
-                                </div>
-                                <div class="task-action">
-                                    <div class="dropdown">
-                                        <a class="dropdown-toggle" href="#" role="button" id="pendingTask" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal"><circle cx="12" cy="12" r="1"></circle><circle cx="19" cy="12" r="1"></circle><circle cx="5" cy="12" r="1"></circle></svg>
-                                        </a>
-
-                                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="pendingTask" style="will-change: transform;">
-                                            <a class="dropdown-item" href="javascript:void(0);">This Week</a>
-                                            <a class="dropdown-item" href="javascript:void(0);">Last Week</a>
-                                            <a class="dropdown-item" href="javascript:void(0);">Last Month</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="w-content">
-
-                                <div class="w-info">
-                                    <p class="value">$ 45,141 <span>this week</span> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trending-up"><polyline points="23 6 13.5 15.5 8.5 10.5 1 18"></polyline><polyline points="17 6 23 6 23 12"></polyline></svg></p>
-                                </div>
-                            </div>
-
-                            <div class="w-progress-stats">
-                                <div class="progress">
-                                    <div class="progress-bar bg-gradient-secondary" role="progressbar" style="width: 57%" aria-valuenow="57" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-
-                                <div class="">
-                                    <div class="w-icon">
-                                        <p>57%</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                
 
                 <div class="col-xl-9 col-lg-12 col-md-12 col-sm-12 col-12 layout-spacing">
                     <div class="widget widget-chart-three">
@@ -246,9 +142,8 @@
                                             </div>
                                             <div class="t-content">
                                                 <div class="t-uppercontent">
-                                                   
-                                                        <h5>@notification.Sender.FullName : <a class=" rounded bs-tooltip" title="View This Message" asp-action="Details" asp-controller="Notifications" asp-route-id="@notification.Id"><span>@notification.Title</span></a></h5>
-                                                   
+
+                                                    <h5>@notification.Sender.FullName : <a class=" rounded bs-tooltip" title="View This Message" asp-action="Details" asp-controller="Notifications" asp-route-id="@notification.Id"><span>@notification.Title</span></a></h5>
                                                 </div>
                                                 <p>@notification.Created.ToString("dd MMM, yyyy")</p>
                                             </div>
@@ -434,7 +329,7 @@
                     </div>
                 </div>
 
-                <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 layout-spacing">
+                <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 layout-spacing"style="height: 100px;">
                     <div class="widget widget-table-one">
                         <div class="widget-heading">
                             <h5 class="text-center">Company Directory</h5>
@@ -446,7 +341,7 @@
 
                                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="pendingTask" style="will-change: transform;">
                                         <a class="dropdown-item" href="javascript:void(0);">View Full Directory</a>
-                                        <a class="dropdown-item" >Update Your Information</a>
+                                        <a class="dropdown-item">Update Your Information</a>
                                         <a class="dropdown-item" asp-action="Index" asp-controller="Notifications">Send a Message</a>
                                     </div>
                                 </div>
@@ -500,21 +395,17 @@
                         <div class="widget-amount">
 
                             <div class="w-a-info funds-received">
-                                <button class="btn btn-dark" asp-action="AllTickets" asp-controller="Tickets" > View My Profile</button>
-                                
+                                <button class="btn btn-dark" asp-action="AllTickets" asp-controller="Tickets"> View My Profile</button>
                             </div>
 
                             <div class="w-a-info funds-spent">
                                 <button class="btn btn-dark " asp-action="MyProjects" asp-controller="Projects"> Update My Profile</button>
-                               
                             </div>
                         </div>
 
                         <div class="widget-content">
 
-                            <div class="bills-stats">
-                                <span>Pending</span>
-                            </div>
+                           
 
                             <div class="invoice-list">
 
@@ -626,10 +517,9 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-       
-    </div>
+            @*</div>*@
+        @*</div>
+    </div>*@
     <!--  END CONTENT AREA  -->
     @*</div>*@
     <!-- END MAIN CONTAINER -->
