--- a/Views/Tickets/AllTickets.cshtml
+++ b/Views/Tickets/AllTickets.cshtml
@@ -1,80 +1,160 @@
 ﻿@model IEnumerable<TitanTracker.Models.Ticket>
+@using TitanTracker.Services.Interfaces
+@using Microsoft.AspNetCore.Identity
+@using TitanTracker.Extensions
+
+@inject IBTProjectService ProjectService
+@inject IBTTicketService TicketService
 
 @{
     ViewData["Title"] = "Index";
-}
-<div class="page-content-tab">
-    <h1>Index</h1>
 
-    <p>
-        <a asp-action="Create">Create New</a>
-    </p>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Title)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Description)
-                </th>
-              
-                <th>
-                   Type
-                </th>
-                <th>
-                   Status
-                </th>
-                <th>
-                   Priority
-                </th>
-                <th>
-                  Submitter
-                </th>
-                <th>
-                   Developer
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
+    int companyId = User.Identity.GetCompanyId().Value;
+}
+
+<!-- BEGIN PAGE LEVEL STYLES -->
+<link href="~/assets/css/apps/notes.css" rel="stylesheet" type="text/css" />
+<link href="~/assets/css/forms/theme-checkbox-radio.css" rel="stylesheet" type="text/css" />
+<!-- END PAGE LEVEL STYLES -->
+
+<div class="app-container mt-5">
+
+    <div class="app-note-container">
+
+        <div class="app-note-overlay"></div>
+
+        <div class="tab-title">
+            <div class="row">
+                <div class="col-md-12 col-sm-12 col-12 text-center">
+                    <a id="btn-add-notes" class="btn btn-primary rounded bs-tooltip" title="Add a New Ticket" data-toggle="modal" data-target="#notesMailModal">Add</a>
+                </div>
+                <div class="col-md-12 col-sm-12 col-12 mt-5">
+                    <ul class="nav nav-pills d-block" id="pills-tab3" role="tablist">
+                        <li class="nav-item">
+                            <a class="nav-link list-actions active" id="all-notes"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit"><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path></svg> All Notes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link list-actions" id="note-fav"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg> Favourites</a>
+                        </li>
+                    </ul>
+
+                    <hr />
+
+                    <p class="group-section"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-tag"><path d="M20.59 13.41l-7.17 7.17a2 2 0 0 1-2.83 0L2 12V2h10l8.59 8.59a2 2 0 0 1 0 2.82z"></path><line x1="7" y1="7" x2="7" y2="7"></line></svg> Tags</p>
+
+                    <ul class="nav nav-pills d-block group-list" id="pills-tab" role="tablist">
+                        <li class="nav-item">
+                            <a class="nav-link list-actions g-dot-primary" id="note-personal">Personal</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link list-actions g-dot-warning" id="note-work">Work</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link list-actions g-dot-success" id="note-social">Social</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link list-actions g-dot-danger" id="note-important">Important</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div id="ct" class="note-container note-grid">
             @foreach (var item in Model)
             {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Title)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Description)
-                    </td>
-                  
-                    
-                    <td>
-                        @Html.DisplayFor(modelItem => item.TicketType.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.TicketStatus.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.TicketPriority.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.OwnerUser.FullName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.DeveloperUser.FullName)
-                    </td>
-                    <td>
-                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                        @*@if (User.IsInRole(Views_UserRoles_Index.Admin.ToString()) || User.IsInRole(Views_UserRoles_Index.ProjectManager.ToString()))
-                            {
-                                <a asp-action="AssignDeveloper" asp-route-id="@item.Id" class="btn-btn-warning">Assign</a>
-                            }*@
-                    </td>
-                </tr>
+                <div class="note-item all-notes note-personal">
+                    <div class="note-inner-content">
+                        <div class="note-content">
+                            <p class="note-title" data-noteTitle="Meeting with Kelly"> @Html.DisplayFor(modelItem => item.Title)</p>
+                            <p class="meta-time"> @Html.DisplayFor(modelItem => item.Created)</p>
+                            <div class="note-description-content">
+                                <p class="note-description" data-noteDescription="Curabitur facilisis vel elit sed dapibus sodales purus rhoncus."> @Html.DisplayFor(modelItem => item.Created)</p>
+                            </div>
+                        </div>
+                        <div class="note-action">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star fav-note"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash-2 delete-note"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg>
+                        </div>
+                        <div class="note-footer">
+                            <div class="tags-selector btn-group">
+                                <a class="nav-link dropdown-toggle d-icon label-group" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="true">
+                                    <div class="tags">
+                                        <div class="g-dot-personal"></div>
+                                        <div class="g-dot-work"></div>
+                                        <div class="g-dot-social"></div>
+                                        <div class="g-dot-important"></div>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical"><circle cx="12" cy="12" r="1"></circle><circle cx="12" cy="5" r="1"></circle><circle cx="12" cy="19" r="1"></circle></svg>
+                                    </div>
+                                </a>
+                                <div class="dropdown-menu dropdown-menu-right d-icon-menu">
+                                    <a class="note-personal label-group-item label-personal dropdown-item position-relative g-dot-personal" href="javascript:void(0);"> Personal</a>
+                                    <a class="note-work label-group-item label-work dropdown-item position-relative g-dot-work" href="javascript:void(0);"> Work</a>
+                                    <a class="note-social label-group-item label-social dropdown-item position-relative g-dot-social" href="javascript:void(0);"> Social</a>
+                                    <a class="note-important label-group-item label-important dropdown-item position-relative g-dot-important" href="javascript:void(0);"> Important</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             }
-        </tbody>
-    </table>
+        </div>
+    </div>
 </div>
+
+<!-- Modal -->
+<div class="modal fade" id="notesMailModal" tabindex="-1" role="dialog" aria-labelledby="notesMailModalTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-body">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x close" data-dismiss="modal"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+                <div class="notes-box">
+                    <div class="notes-content">
+                        <form id="notesMailModalTitle" method="post">
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="d-flex note-title">
+                                        <input name="Title" type="text" required class="form-control" maxlength="25" placeholder="Title*">
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="d-flex note-description">
+                                        <textarea name="Description" required id="n-description" class="form-control" maxlength="60" placeholder="Description*" rows="3"></textarea>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="d-flex note-title">
+                                        <select name="ProjectId" type="text" required class="form-control" asp-items="ViewBag.ProjectId" maxlength="25" placeholder="Project*">
+                                            <option>Project*</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="d-flex note-title">
+                                        <select name="TicketPriorityId" type="text" asp-items="ViewBag.TicketPriorityId" required class="form-control" maxlength="25" placeholder="Priority*"></select>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="d-flex note-title">
+                                        <select name="TicketTypeId" type="text" required class="form-control" maxlength="25" asp-items="ViewBag.TicketTypeId" placeholder="Type*"></select>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn" data-dismiss="modal"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path></svg> Discard</button>
+                <a href="javascript:document.getElementById('notesMailModalTitle').submit()" class="btn btn-primary">Create</a>
+            </div>
+        </div>
+    </div>
+
+    @section scripts
+    {
+        <script src="~/assets/js/scrollspyNav.js"></script>
+
+    }
